--- a/music-client/main.css
+++ b/music-client/main.css
@@ -44,3 +44,12 @@
     border: solid black 1px;;
 
 }
+
+#content {
+
+    font-weight: bold;
+    font-size: large;
+    font-stretch: expanded;
+
+
+}
