--- a/music-client/main.css
+++ b/music-client/main.css
@@ -1,7 +1,20 @@
+
+
 .container {
     margin-top: 10px;
+   
+    
 }
-
+html {
+    /* To make use of full height of page*/
+    min-height: 100%;
+    margin: 0;
+}
+body {
+    min-height: 100%;
+    margin: 0;
+    
+}
 #header {
     display: flex;
     justify-content: space-between;
@@ -31,7 +44,7 @@
 }
 
 #footer-player{
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     margin-bottom: 0px;
